--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "antd": "^4.12.3",
     "axios": "^0.21.1",
     "node-sass": "^5.0.0",
+    "r": "^0.0.5",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
     "react-scrollbars-custom": "^4.0.25",
+    "recharts": "^2.0.6",
     "victory": "^35.4.9",
     "web-vitals": "^1.0.1"
   },
